fixed bug with overlapping image and text in news feed

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@
 /* CSS GRID SECTION */
 .wrapper {
   display: grid;
-  grid-template-columns: 0.3fr auto 0.3fr;
+  grid-template-columns: 0.25fr auto 0.25fr;
 
   /* grid-template-columns: repeat(3, 1fr); */
   gap: 0px 0px;
@@ -102,7 +102,7 @@
   display: grid;
   /* grid-template-rows: repeat(2, 1fr); */
   grid-template-rows: 0.1fr 0.9fr;
-  grid-auto-rows: 1fr;
+  /* grid-auto-rows: 200px; */
   gap: 0px 0px;
   grid-template-areas:
     "rh-sidebar__search"
@@ -201,7 +201,7 @@ textarea {
 
 /* Media Queries */
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 599px) {
   .wrapper {
     display: grid;
     grid-template-columns: 0.3fr auto;
@@ -315,37 +315,93 @@ textarea {
   border: none;
 }
 
-.what-happens {
+/* .what-happens {
   margin-top: 1rem;
   margin-left: 1rem;
-}
+} */
 
 /* Stylings */
+.news-subgrid {
+  display: grid;
+  grid-template-columns: 0.7fr 0.3fr;
+  grid-auto-rows: 2em 2em;
+
+  gap: 2em 0px;
+  grid-template-areas:
+    "news-text image"
+    "news-text-2 image-2";
+  height: 100vh;
+}
+
+.what-happens__news-item {
+  grid-area: news-text;
+}
+
+.image-container {
+  grid-area: image;
+}
+
+.what-happens__news-item-2 {
+  grid-area: news-text-2;
+}
+
+.image-container-2 {
+  grid-area: image-2;
+}
+
 .rh-sidebar__news {
   background-color: grey;
   border-radius: 15px;
   /* border-color: red; */
 }
 
-.what-happens {
-  border-bottom: 2px solid green;
+.what-happens__news-item,
+.what-happens__news-item-2 {
+  /* border-bottom: 2px solid green; */
   display: block;
   position: relative;
+  margin-top: 0.5rem;
+  margin-left: 0.5rem;
+  margin-bottom: 5rem;
 }
 
-.what-happens__news-item > p {
+.what-happens__news-item > p,
+.what-happens__news-item-2 > p {
   font-weight: bold;
   font-size: 0.5rem;
   max-width: 40ch;
 }
 
+.rh-sidebar__news > h5 {
+  margin-top: 1em;
+  margin-left: 0.5em;
+}
+
 .image-container {
   position: absolute;
-  display: block;
+  display: inline-block;
   right: 1em;
-  top: -0.1em;
+  top: 3.6em;
+  /* margin-right: 0.1em; */
+}
+
+.image-container-2 {
+  position: absolute;
+  display: inline-block;
+  right: 1em;
+  top: 7.6em;
+  /* margin-right: 0.1em; */
 }
 
 .boolean-logo {
   border-radius: 20%;
 }
+
+.what-happens__news-item > p:nth-child(2) {
+  font-weight: bold;
+  font-size: 0.5rem;
+  max-width: 40ch;
+  margin-top: 1rem;
+}
+
+/* Overlapping Image and Text bug fix - News Feed */
